--- a/blog/2025-07-23-how-to-covert-latex-to-word-without-losing-formatting.mdx
+++ b/blog/2025-07-23-how-to-covert-latex-to-word-without-losing-formatting.mdx
@@ -17,6 +17,9 @@ tags:
 date: 2025-07-23
 ---
 
+import GiscusComments from "@site/src/components/GiscusComments";
+import Newsletter from "@site/src/components/Newsletter";
+
 # 📄 How to Convert LaTeX to Word Without Losing Formatting (APA 7 Edition)
 
 LaTeX is the gold standard for technical writing, offering unparalleled control over document formatting, mathematical equations, and citation management. However, the reality of academic and professional publishing often demands Microsoft Word compatibility—especially for APA 7 compliance, journal submissions, or collaboration with non-LaTeX users.
@@ -1958,3 +1961,11 @@ This workflow represents the convergence of technical precision and academic rig
 ---
 
 **Happy converting! 🚀**
+
+<GiscusComments />
+<Newsletter
+  title="🚀 Enjoyed this post?"
+  description="Join our community and get weekly updates!"
+  buttonText="Join Now"
+  theme="secondary"
+/>
