--- a/blog/2025-07-25-build-globalconnect-financial-microservices-architecture-tutorial.mdx
+++ b/blog/2025-07-25-build-globalconnect-financial-microservices-architecture-tutorial.mdx
@@ -17,3 +17,14 @@ tags:
   ]
 date: 2025-07-27
 ---
+
+import GiscusComments from "@site/src/components/GiscusComments";
+import Newsletter from "@site/src/components/Newsletter";
+
+<GiscusComments />
+<Newsletter
+  title="🚀 Enjoyed this post?"
+  description="Join our community and get weekly updates!"
+  buttonText="Join Now"
+  theme="secondary"
+/>
