--- a/blog/2025-07-23-how-to-covert-latex-to-word-without-losing-formatting.mdx
+++ b/blog/2025-07-23-how-to-covert-latex-to-word-without-losing-formatting.mdx
@@ -1960,6 +1960,8 @@ This workflow represents the convergence of technical precision and academic rig
 
 ---
 
+## 💬 Comments
+
 <GiscusComments />
 <Newsletter
   title="🚀 Enjoyed this post?"
