--- a/docs/How to Add a Professional Newsletter Subscription to Any Website.mdx
+++ b/docs/How to Add a Professional Newsletter Subscription to Any Website.mdx
@@ -1,3 +1,6 @@
+import GiscusComments from "@site/src/components/GiscusComments";
+import Newsletter from "@site/src/components/Newsletter";
+
 # 🚀 How I Added a Newsletter to My Docusaurus Blog: The Real Journey (Mistakes Included!)
 
 > **💡 TL;DR:** What I thought would be a 30-minute task turned into hours of debugging. Here's everything that went wrong, how I fixed it, and the amazing newsletter system I ended up with!
@@ -781,3 +784,11 @@ _Have you built a newsletter for your site? What challenges did you face? Drop a
 ---
 
 _P.S. - If this tutorial helped you out, consider sharing it with other developers who might be struggling with the same issues. We've all been there! 🤝_
+
+<GiscusComments />
+<Newsletter
+  title="🚀 Enjoyed this post?"
+  description="Join our community and get weekly updates!"
+  buttonText="Join Now"
+  theme="secondary"
+/>
