--- a/blog/2025-07-24-How to Add Lazy-Loaded Giscus Comments to Your Docusaurus Blog (Complete Guide).mdx
+++ b/blog/2025-07-24-How to Add Lazy-Loaded Giscus Comments to Your Docusaurus Blog (Complete Guide).mdx
@@ -7,6 +7,7 @@ date: 2025-07-25
 ---
 
 import GiscusComments from "@site/src/components/GiscusComments";
+import Newsletter from "@site/src/components/Newsletter";
 
 # 🧠 Complete Guide: Adding Lazy-Loaded Giscus Comments to Your Docusaurus Blog
 
