--- a/get-trained/index.mdx
+++ b/get-trained/index.mdx
@@ -4,8 +4,8 @@ description: Professional training courses and certifications
 slug: /get-trained
 ---
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
 
 # Get Trained 🎓
 
@@ -22,27 +22,33 @@ Welcome to our comprehensive training programs designed to enhance your skills.
 
 ## Available Courses
 
-export const CourseCard = ({title, duration, level}) => (
-  <div style={{
-    border: '1px solid #ccc',
-    borderRadius: '8px',
-    padding: '16px',
-    margin: '8px 0'
-  }}>
+export const CourseCard = ({ title, duration, level }) => (
+  <div
+    style={{
+      border: "1px solid #ccc",
+      borderRadius: "8px",
+      padding: "16px",
+      margin: "8px 0",
+    }}
+  >
     <h3>{title}</h3>
-    <p><strong>Duration:</strong> {duration}</p>
-    <p><strong>Level:</strong> {level}</p>
+    <p>
+      <strong>Duration:</strong> {duration}
+    </p>
+    <p>
+      <strong>Level:</strong> {level}
+    </p>
   </div>
 );
 
-<CourseCard 
-  title="Course 1: Fundamentals" 
-  duration="4 weeks" 
-  level="Beginner" 
+<CourseCard
+  title="Course 1: Fundamentals"
+  duration="4 weeks"
+  level="Beginner"
 />
 
-<CourseCard 
-  title="Course 2: Advanced Topics" 
-  duration="6 weeks" 
-  level="Advanced" 
+<CourseCard
+  title="Course 2: Advanced Topics"
+  duration="6 weeks"
+  level="Advanced"
 />
