--- a/get-trained/index.mdx
+++ b/get-trained/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Get Trained
 description: Professional training courses and certifications
-slug: /get-trained
+slug: /
 ---
 
 import Tabs from "@theme/Tabs";
