--- a/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
+++ b/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
@@ -1,19 +1,9 @@
 ---
-slug: lucidscale-enterprise-cloud-visualization-guide
-title: "From Chaos to Clarity. How Lucidscale Turned Our 40-Service Nightmare Into a Visual Masterpiece"
+slug: reducing-emergency-room-wait-times-systems-engineering-ai
+title: "Reducing Emergency Room Wait Times with Systems Engineering and AI"
 authors: [francis]
-tags:
-  [
-    lucidscale,
-    aws,
-    cloud-architecture,
-    enterprise,
-    microservices,
-    disaster-recovery,
-    visualization,
-    lucidchart,
-  ]
-date: 2025-07-27
+tags: [systems-engineering, healthcare, ai, operations-research, simulation, knime, machine-learning]
+date: 2025-08-04
 ---
 
 import GiscusComments from "@site/src/components/GiscusComments";
