--- a/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
+++ b/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
@@ -73,11 +73,10 @@ To redesign and optimize an emergency care unit using data-driven modeling, pred
 |------|-------|
 | Modeling & Simulation | **SimPy**, **KNIME**, Excel |
 | Machine Learning | **scikit-learn**, XGBoost, SHAP |
-| Optimization | **PuLP**, **Google OR-Tools** |
-| Visualization | **Power BI**, **Streamlit**, Tableau |
-| Mapping & Diagrams | **Lucidchart**, **draw.io**, **Miro** |
-| Documentation | **Notion**, **Overleaf**, **Google Docs** |
-
+| Optimization | **PuLP**, Google OR-Tools |
+| Visualization | **Power BI**, Streamlit, Tableau |
+| Mapping & Diagrams | **Lucidchart**, draw.io, Miro |
+| Documentation | **Notion**, Overleaf, Google Docs |
 ---
 
 
@@ -107,11 +106,6 @@ It includes:
 
 ---
 
-This is just one of many complex problems we can solve using **AI-augmented systems thinking**.
-
-Stay tuned for more field-based case studies on logistics, manufacturing, ride-share strategy, and workforce optimization.
-
-—  
 
 ## 💬 Comments
 
