--- a/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
+++ b/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
@@ -94,13 +94,15 @@ By bringing together engineering, analytics, and empathy, this project delivered
 
 ## 🚧 Want to Learn How to Build This?
 
-I’ve documented the full technical and strategic breakdown in the **Tutorials section** of this blog.
+## 🚧 Want to Learn How to Build This?
 
+I've documented the full technical and strategic breakdown in the **Tutorials section** of this blog.
 
+> **⚠️ Privacy Notice:** Since this was a real healthcare consulting project, some code snippets, data samples, and specific methodologies have been redacted or generalized to protect client confidentiality and comply with healthcare privacy regulations. The core techniques and frameworks remain intact for learning purposes.
 
 It includes:
 - System maps
-- Simulation templates
+- Simulation templates  
 - Sample ML workflows in KNIME + Python
 - KPIs and reporting frameworks
 
